force-app/main/default/objects/Case/fields/Case_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Case_Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>