force-app/main/default/objects/Case/fields/Procedure_Repository__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Repository__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case relates to a procedure</description>
    <label>Procedure Repository</label>
    <referenceTo>Procedure_Repository__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>