force-app/main/default/objects/Case/fields/Submitter_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Submitter_Manager_Email__c</fullName>
    <label>Submitter Manager Email</label>
    <type>Email</type>
</CustomField>