force-app/main/default/objects/Case/recordTypes/Audit_Finding.recordType-meta.xml
<RecordType>
    <fullName>Audit_Finding</fullName>
    <active>true</active>
    <businessProcess>Audit Finding</businessProcess>
    <description>auditor has identified issues and submitting a request to get them reviewed  and fixed</description>
    <label>Audit Finding</label>
</RecordType>