force-app/main/default/objects/Case/recordTypes/Feedback.recordType-meta.xml
<RecordType>
    <fullName>Feedback</fullName>
    <active>true</active>
    <businessProcess>Feedback</businessProcess>
    <description>employee has found some issue with procedure and is reporting it to the  procedures team</description>
    <label>Feedback</label>
</RecordType>