force-app/main/default/objects/Case/recordTypes/Procedure_Update.recordType-meta.xml
<RecordType>
    <fullName>Procedure_Update</fullName>
    <active>true</active>
    <businessProcess>Procedure Update</businessProcess>
    <description>employee has updated the procedure and is submitting it for review  and approval</description>
    <label>Procedure Update</label>
</RecordType>