force-app/main/default/objects/Case/listViews/Legal_Team_Case.listView-meta.xml
<ListView>
    <fullName>Legal_Team_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Legal Team</label>
    <queue>Legal_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>