force-app/main/default/objects/Case/listViews/Procedure_Team_Case.listView-meta.xml
<ListView>
    <fullName>Procedure_Team_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Procedure Team</label>
    <queue>Procedure_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>